[tool.poetry]
name = "youtube-tdd-fast-api"
version = "0.1.0"
description = ""
authors = ["RukshanJS"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
httpx = "^0.27.0"
fastapi = "^0.112.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
